package com.flyread.file.imp0rt.excel;

import com.flyread.file.imp0rt.base.BaseImportContext;

/**
 * @author by hongbf on 2018/2/28.
 */
public class ExcelImportContext extends BaseImportContext {

    public ExcelImportContext() {
    }
}
