@startuml
abstract class BaseImportContext {
    ImportRequest request
    ImportResponse response
    Iterator iterator
    ImportHandlerPipeline pipeline
}
class ExcelImportContext extends BaseImportContext {
}
interface ImportHandler {
    void handleRequest(BaseImportContext context) throws Exception
}
interface ImportService {
    ImportResponse importFile()
}
interface ImportTranslate {
    Object translate(Object o)
}
class ExcelImportTranslate implements ImportTranslate {
    Map<ExcelCellType,Format> formatMap
}
class ImportHandlerPipeline implements ImportHandler {
    List<ImportHandler> handlers
    ImportHandlerPipeline addLast(ImportHandler handler)
}
class ExcelImportListHandler implements ImportHandler {
}
class DefaultExcelImportHandler implements ImportHandler {
}
class ExcelImportServiceImpl implements ImportService {
    ExcelImportContext context
}
enum ExcelCellType {
    CELL_TYPE_NUMERIC
    CELL_TYPE_STRING
    CELL_TYPE_FORMULA
    CELL_TYPE_BLANK
    CELL_TYPE_BOOLEAN
    CELL_TYPE_ERROR
}
class ImportResponse {
    int importCount
    Object data
}
class ImportRequest {
    File importFile
    int selectSheet
    int startRowNum
    ImportTranslate translate
}
class ImportFactory {
    ImportService create(ImportType type,ImportHandlerPipeline pipeline, ImportRequest request)
}
enum ImportType {
    EXCEL
}
class ImportBootstrap {
    ImportRequest request
    ImportHandlerPipeline pipeline
    ImportService build(ImportType type)
    ImportBootstrap initRequest(File importFile)
    ImportBootstrap initRequest(File importFile,int selectSheet)
    ImportBootstrap initRequest(File importFile,ImportTranslate translate)
    ImportBootstrap initRequest(File importFile, int selectSheet, int startRowNum, ImportTranslate translate)
    ImportBootstrap initPipeline()
    ImportBootstrap initPipeline(List<ImportHandler> handlers, boolean useCustomExportHandler)
}
ExcelImportServiceImpl <-- ExcelImportContext
ExcelImportTranslate <-- ExcelCellType
BaseImportContext <-- ImportResponse
BaseImportContext <-- ImportRequest
BaseImportContext <-- ImportHandlerPipeline
ImportRequest <-- ExcelImportTranslate
ImportFactory <-- ImportType
ImportBootstrap <-- ImportFactory
ImportBootstrap <-- ImportRequest
ImportBootstrap <-- ImportHandlerPipeline
@enduml